<resources>
    <string name="app_name">DemoApp</string>
    <string name="date">Date</string>
    <string name="title">title</string>
    <string name="report1">Report1</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="registration">REGISTRATION</string>
    <string name="sign_up1">Sign UP</string>
    <string name="login1">Login</string>
    <string name="log_out">LOG OUT</string>
    <string name="hi_arun">HI Arun</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height_in_cm">Height (in Cm)</string>
    <string name="weight_in_kg">Weight (in Kg)</string>
    <string name="occupation">Occupation</string>
    <string name="bp">BP</string>
    <string name="submit">Submit</string>
    <string name="nimmoju_arun_kumar_chary">NIMMOJU ARUN KUMAR CHARY</string>
    <string name="arun_kumar_chary">arun kumar chary</string>
</resources>